# kas-selector

./: Cargo.toml  README.md
.github/workflows/: release.yml
locales/ar/: main.ftl
locales/de/: main.ftl
locales/en/: main.ftl
locales/en-US/: main.ftl
locales/es/: main.ftl
locales/fr/: main.ftl
locales/ru/: main.ftl
locales/zh/: main.ftl
src/: activity.rs  config.rs  error.rs  fluent.rs  locale.rs  main.rs  shell_script_filename.rs
